pcrm main 수정 1. 평택시 title명 수정 2. side menu bar 제거 3. 수화 전화번호 제거 4. footer 사이즈 변경 5. 화면 스크롤 안되게 사이즈 조정 6. 로그인유저 아이디-> 이름만보이도록 수정(이름가져오도록 ctrl수정) 7. 로그아웃 클릭시 창 닫히도록 수정

--- a/SoftdB_pcrm/src/main/webapp/softdb/css/common.css
+++ b/SoftdB_pcrm/src/main/webapp/softdb/css/common.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:700&display=swap');
 
 /* #wrap {position: relative; width: 100%; min-height: 100%; box-sizing: border-box; min-width:1660px;} */
-#wrap {position: relative; width: 100%; min-height: 100%; box-sizing: border-box;}
+#wrap {position: relative; width: 100%; /*min-height: 100%;*/ box-sizing: border-box;}
 
 html, body{height:100%;}
 html, body, div, span, object, iframe,
@@ -1127,7 +1127,8 @@ footer .footer_infoWrap {
 	padding:10px 0 30px 0px;
 	position: relative;
 	clear:both;
-	height: 130px;
+/* 	height: 130px; */
+	height: 120px;
 }
 footer .wa_mark {position: absolute;right:0;top:0;}
 
