--- a/SoftdB_pcrm/src/main/webapp/bootstrap/css/style.css
+++ b/SoftdB_pcrm/src/main/webapp/bootstrap/css/style.css
@@ -1032,6 +1032,9 @@ ul.sidebar-menu li.active a i {
     display: inline-block;
 
     margin-top: 60px;
+    
+/*     20.07.08 */
+    margin-bottom: -30px;
 
     padding: 15px;
 
