PCRM 메인 수정 1. 첫 로드시 '비전1동'이 아닌 '평택시'로 나오도록 2. 조회/초기화/로고/기간설정(SelectBox) 이벤트 발생시 '평택시' 로 초기화

--- a/SoftdB_pcrm/src/main/webapp/bootstrap/css/style.css
+++ b/SoftdB_pcrm/src/main/webapp/bootstrap/css/style.css
@@ -1836,7 +1836,7 @@ div[data-role="editor-toolbar"] {
 
   text-align: center;
 
-  margin-right: 20px;
+/*   margin-right: 20px; */
 
   padding-right: 20px;
 
