--- a/SoftdB_pcrm/.settings/org.eclipse.wst.common.component
+++ b/SoftdB_pcrm/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <property name="java-output-path" value="/SoftdB_pcrm/build/classes"/>
-        <property name="context-root" value="SoftdB_pcrm"/>
+        <property name="context-root" value="/"/>
     </wb-module>
 </project-modules>
